# runpod-wispr

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  pyproject.toml  requirements-clients.txt  requirements.txt  test_input.json  transcribe
scripts/: transcribe.py  upload_to_gcs.py
src/: handler.py
